--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN=8282297977:AAEB21pAfvxYLCA2cBE3TiwhVO4ezpohfms
-PORT=3000
+BOT_TOKEN="8282297977:AAEB21pAfvxYLCA2cBE3TiwhVO4ezpohfms"
+PORT="8080"
