--- a/web/package.json
+++ b/web/package.json
@@ -1,25 +1,14 @@
 {
   "name": "giftbot-miniapp",
-  "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node index.js"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "framer-motion": "^11.5.0",
-    "lucide-react": "^0.441.0",
-    "axios": "^1.7.2"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "vite": "^5.4.2",
-    "tailwindcss": "^3.4.10",
-    "postcss": "^8.4.47",
-    "autoprefixer": "^10.4.20"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5"
   }
 }
