--- a/railway.toml
+++ b/railway.toml
@@ -1,1 +1,9 @@
+[build]
+  builder = "NIXPACKS"
 
+[start]
+  cmd = "npm start"
+
+[deploy]
+  startCommand = "npm start"
+  restartPolicyType = "always"
