--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
+# Node
 node_modules
+npm-debug.log
+yarn-error.log
+
+# Env
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build
+dist
+build
+
+# IDE
+.vscode
+.idea
+
+# OS
+.DS_Store
+Thumbs.db
