--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,4 @@
-{
+  {
   "name": "giftbot-server",
   "version": "1.0.0",
   "main": "src/app.js",
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@tma.js/init-data-node": "^2.0.6",
+    "axios": "^1.7.7",               // ← добавлено для запросов к Telegram API
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
