--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@tma.js/init-data-node": "^2.0.6",
-    "axios": "^1.7.7",               // ← добавлено для запросов к Telegram API
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
